--- a/gymapp/package.json
+++ b/gymapp/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "framer-motion": "^11.4.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "standard": "17.1.0"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
+    "standard": "17.1.0",
+    "tailwindcss": "^3.4.10"
   },
-  "rules":{
-        "indent": [2, "tab"]
-    }
+  "rules": {
+    "indent": [
+      2,
+      "tab"
+    ]
+  }
 }
